This file summarizes changes in WinMerge releases.
Numbers in parentheses refer to SourceForge.net tracker item numbers (#XXXXX) or
to Subversion revision numbers (rXXXXX).

WinMerge 2.8.4
  BugFix: Crash when starting a second instance (#1993835)
  BugFix: Crash when starting WinMerge with only one path (#1994402)
  Translation updates:
  - Brazilian (#1994578)

WinMerge 2.8.2 - 2008-06-12 (r5478)
  Release Notes update (#1933950, #1990886)
  Make 'Yes' the default button in copy confirmation dialog (#1943647)
  Allow drag & drop of paths to Open dialog (#1945254)
  Enlarge 'Discard All' button in Save confirmation dialog (#1947216)
  Tab icons at Filter dialog (#1926531)
  Add VB.net keywords to Basic highlighter (#1970912)
  Manual: Use PNG files (#1988845, #1989744)
  BugFix: Shortcuts given in command line were not expanded (#1942217)
  BugFix: Version Control filter did not match all VSS files (#1881186)
  BugFix: Fix command line paths in quotes ending with "\" (#1963523)
  BugFix: Command line description text starting with "/" confused
    WinMerge (#1973225)
  BugFix: Fix showing differences in the end of the line (#1883409, #1962816)
  BugFix: Item count in statusbar not get cleared (#1976480)
  BugFix: ISL file syntax highlighting starts comment with { (#1981326)
  BugFix: Workaround for WinMerge not exiting for some users (#1602313)
  BugFix: Temp paths in Reports created from archive file (#1984346)
  New translation: Greek (#1968429)
  New translation: Romanian (#1939729)
  New translation: Ukrainian (#1973149, #1974021)
  Translation updates:
  - Brazilian (#1978374)
  - Bulgarian (#1957434)
  - Croatian (#1958283)
  - German (#1949068)
  - Italian (#1939235)
  - Korean (#1978362)
  - Polish (#1934655)
  - Swedish (#1950188, #1980970)

WinMerge 2.8.0 - 2008-04-03 (r5254)
  Installer: Use correct way to create start menu web link (#1913919)
  Installer: Updated the side art of the installer application (#1915012)